force-app/main/default/objects/Account/fields/Currently_Accepting_Mentee_Requests__c.field-meta.xml
<CustomField>
    <fullName>Currently_Accepting_Mentee_Requests__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Currently Accepting Mentee Requests</label>
    <type>Checkbox</type>
</CustomField>