force-app/main/default/objects/Account/fields/Mentoring_Preference__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_Preference__c</fullName>
    <label>Mentoring Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person and Virtual</fullName>
            </value>
            <value>
                <fullName>Virtual Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>