force-app/main/default/objects/Account/listViews/Mentors.listView-meta.xml
<ListView>
    <fullName>Mentors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Mentor</value>
    </filters>
    <label>Mentors</label>
</ListView>